testdata/bad/bad-fail-1.ct
# Command should fail, but doesn't.

$ echo --> FAIL

# We shouldn't see this output, because the file
# stops after the first error.

$ echo should not appear

